// Vitest Snapshot v1

exports[`setup-component > fixtures > tests/fixtures/setup-sfc/basic.setup.tsx 1`] = `
"import { defineComponent, createVNode } from 'vue';

const __default__ = defineComponent({
  render: () => {
    return createVNode(\\"div\\", null, null);
  }
});
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  __name: \\"basic.setup\\",
  props: {
    foo: {
      type: String,
      required: true
    }
  },
  setup(__props) {
    return {};
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var basic_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { basic_setup as default };
"
`;

exports[`setup-component > fixtures > tests/fixtures/setup-sfc/with-define-options.setup.tsx 1`] = `
"import { defineComponent, createVNode } from 'vue';

const __default__ = defineComponent(Object.assign({}, {
  name: \\"App\\"
}, {
  render: () => {
    return createVNode(\\"div\\", null, null);
  }
}));
var _sfc_main = /* @__PURE__ */ defineComponent({
  ...__default__,
  __name: \\"with-define-options.setup\\",
  setup(__props) {
    return () => {
    };
  }
});

var _export_sfc = (sfc, props) => {
  const target = sfc.__vccOpts || sfc;
  for (const [key, val] of props) {
    target[key] = val;
  }
  return target;
};

var withDefineOptions_setup = /* @__PURE__ */ _export_sfc(_sfc_main, [__FILE__]);

export { withDefineOptions_setup as default };
"
`;
